MODON MRE BPDEV/force-app/main/default/objects/ADHA_Applicant__c/ADHA_Applicant__c.object-meta.xml
<CustomObject>
    <description>An ADHA-eligible customer for the Baniyas microsite. Standalone - no Account, Contact or Lead is created.</description>
    <label>ADHA Applicant</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Applicant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ADHA Applicants</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>