MODON MRE BPDEV/force-app/main/default/objects/ADHA_Applicant__c/fields/ADHA_Batch_Ref__c.field-meta.xml
<CustomField>
    <fullName>ADHA_Batch_Ref__c</fullName>
    <description>Batch the applicant arrived in. Reported on daily.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ADHA Batch Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>