MODON MRE BPDEV/force-app/main/default/objects/ADHA_Applicant__c/fields/Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Application_Number__c</fullName>
    <description>ADHA application number - the key on the Eligibility_Input feed.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Application Number</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>