MODON MRE BPDEV/force-app/main/default/objects/ADHA_Applicant__c/fields/Approved_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Approved_Loan_Amount__c</fullName>
    <description>Drives the additional amount: max(0, unit price - this).</description>
    <label>Approved Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>