MODON MRE BPDEV/force-app/main/default/objects/ADHA_Applicant__c/fields/Batch_Received_On__c.field-meta.xml
<CustomField>
    <fullName>Batch_Received_On__c</fullName>
    <description>When Modon received the batch.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Batch Received On</label>
    <type>DateTime</type>
</CustomField>