MODON MRE BPDEV/force-app/main/default/objects/ADHA_Applicant__c/fields/Current_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Current_Attempt__c</fullName>
    <description>1 or 2. There is no third attempt.</description>
    <label>Current Attempt</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>