MODON MRE BPDEV/force-app/main/default/objects/ADHA_Applicant__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <description>From the ADHA feed.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>