MODON MRE BPDEV/force-app/main/default/objects/ADHA_Applicant__c/fields/Declaration_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Declaration_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Journey stage 3. The reservation journey is unreachable until this is true.</description>
    <label>Declaration Accepted</label>
    <type>Checkbox</type>
</CustomField>