MODON MRE BPDEV/force-app/main/default/objects/ADHA_Applicant__c/fields/Declaration_Accepted_On__c.field-meta.xml
<CustomField>
    <fullName>Declaration_Accepted_On__c</fullName>
    <description>Timestamp of acceptance, captured as evidence of consent.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Declaration Accepted On</label>
    <type>DateTime</type>
</CustomField>