MODON MRE BPDEV/force-app/main/default/objects/ADHA_Applicant__c/fields/Declaration_Language__c.field-meta.xml
<CustomField>
    <fullName>Declaration_Language__c</fullName>
    <description>Which language version was accepted. AR and EN are not interchangeable evidence of consent.</description>
    <label>Declaration Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>en</fullName>
            </value>
            <value>
                <fullName>ar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>