MODON MRE BPDEV/force-app/main/default/objects/ADHA_Applicant__c/fields/Declaration_Session_Hash__c.field-meta.xml
<CustomField>
    <fullName>Declaration_Session_Hash__c</fullName>
    <description>Hash of the session that accepted the declaration. Matched against Session_Token_Hash__c so a refresh does not re-ask it and a fresh login does.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Declaration Session Hash</label>
    <length>64</length>
    <type>Text</type>
</CustomField>