MODON MRE BPDEV/force-app/main/default/objects/ADHA_Applicant__c/fields/Declaration_Version__c.field-meta.xml
<CustomField>
    <fullName>Declaration_Version__c</fullName>
    <description>Version of the General Declaration text the customer actually accepted.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Declaration Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>