MODON MRE BPDEV/force-app/main/default/objects/ADHA_Applicant__c/fields/Eligible_Categories__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Categories__c</fullName>
    <description>Multi-select A/B/C, matched against ADHA_Unit__c.Category_Type__c.</description>
    <label>Eligible Categories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>