MODON MRE BPDEV/force-app/main/default/objects/ADHA_Applicant__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>From the ADHA feed.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Email</label>
    <type>Email</type>
</CustomField>