MODON MRE BPDEV/force-app/main/default/objects/ADHA_Applicant__c/fields/Emirates_ID__c.field-meta.xml
<CustomField>
    <fullName>Emirates_ID__c</fullName>
    <description>Format 784-YYYY-NNNNNNN-N. Unique; used for microsite verification.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Emirates ID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>