MODON MRE BPDEV/force-app/main/default/objects/ADHA_Applicant__c/fields/Extra_Unit_Changes__c.field-meta.xml
<CustomField>
    <fullName>Extra_Unit_Changes__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Villa changes granted to THIS applicant on top of ADHA_Setting.Max_Unit_Changes__c. Set to 1 to give one person a third change. Deliberately per applicant: raising the setting instead would give everyone a third change retroactively. History tracked, so the grant records who and when. Read null-safe in Apex, since a default only applies to records created after this field.</description>
    <label>Extra Unit Changes</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>