MODON MRE BPDEV/force-app/main/default/objects/ADHA_Applicant__c/fields/First_Verified_Login__c.field-meta.xml
<CustomField>
    <fullName>First_Verified_Login__c</fullName>
    <description>THE SLA TRIGGER. Set once on first successful OTP and never overwritten.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>First Verified Login</label>
    <type>DateTime</type>
</CustomField>