MODON MRE BPDEV/force-app/main/default/objects/ADHA_Applicant__c/fields/Is_Ops__c.field-meta.xml
<CustomField>
    <fullName>Is_Ops__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Half of the double gate for pin mode on the site: this flag AND the Emirates ID present in ADHA_Setting__mdt.Ops_Emirates_Ids__c. Either alone does nothing. An ops session skips the declaration and the journey and lands in pin mode; it may pin and unpin only, never reserve or consent for a customer.</description>
    <label>Is Ops</label>
    <type>Checkbox</type>
</CustomField>