MODON MRE BPDEV/force-app/main/default/objects/ADHA_Applicant__c/fields/Journey_Stage__c.field-meta.xml
<CustomField>
    <fullName>Journey_Stage__c</fullName>
    <description>Mirrors the ADHA daily report breakdown exactly.</description>
    <label>Journey Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invited</fullName>
            </value>
            <value>
                <fullName>Logged In</fullName>
            </value>
            <value>
                <fullName>Declaration Accepted</fullName>
            </value>
            <value>
                <fullName>Exploring</fullName>
            </value>
            <value>
                <fullName>Unit Selected</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>DocuSign Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>