MODON MRE BPDEV/force-app/main/default/objects/ADHA_Applicant__c/fields/Login_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Login_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this beneficiary has been released into an open reservation batch and may sign in. Set by ADHA_BatchReleaseJob, and only once the invitation SMS has actually been sent. Deliberately separate from Invitation_SMS_Status__c: that field is delivery reporting, and a provider receipt must never be able to change who can sign in. Only read while ADHA_Setting__mdt.Batch_Release_Mode__c is on and reservations are open; exploration browsing ignores it. Must also be added to the SELECT in ADHA_JourneyController.startLogin or it reads as null.</description>
    <inlineHelpText>Ticked when the beneficiary has been texted their reservation slot. Untick only to withdraw access.</inlineHelpText>
    <label>Login Enabled</label>
    <type>Checkbox</type>
</CustomField>