MODON MRE BPDEV/force-app/main/default/objects/ADHA_Applicant__c/fields/Masked_Emirates_ID__c.field-meta.xml
<CustomField>
    <fullName>Masked_Emirates_ID__c</fullName>
    <description>Display-safe form, populated by the service. Never show the full ID in the UI.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Masked Emirates ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>