MODON MRE BPDEV/force-app/main/default/objects/ADHA_Applicant__c/fields/Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Number__c</fullName>
    <description>Destination for invitation SMS and OTP.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Mobile Number</label>
    <type>Phone</type>
</CustomField>