MODON MRE BPDEV/force-app/main/default/objects/ADHA_Applicant__c/fields/Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Language__c</fullName>
    <description>Defaults to en. Drives SMS, DocuSign and undertaking language.</description>
    <label>Preferred Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>en</fullName>
            </value>
            <value>
                <fullName>ar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>