MODON MRE BPDEV/force-app/main/default/objects/ADHA_Applicant__c/fields/Prior_Session_Token_Hash__c.field-meta.xml
<CustomField>
    <fullName>Prior_Session_Token_Hash__c</fullName>
    <description>Hash of the session token replaced by the most recent login. Lets a superseded window be told it was signed out because of a new sign-in, rather than the generic expiry message.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Prior Session Token Hash</label>
    <length>128</length>
    <type>Text</type>
</CustomField>