MODON MRE BPDEV/force-app/main/default/objects/ADHA_Applicant__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <description>Half of the eligibility rule. Note: units only carry House Purchase Loan or House Grant - the stock for Deferred Loan is unconfirmed.</description>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>House Purchase Loan</fullName>
            </value>
            <value>
                <fullName>House Purchase Deferred Loan</fullName>
            </value>
            <value>
                <fullName>House Grant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>