MODON MRE BPDEV/force-app/main/default/objects/ADHA_Applicant__c/fields/Session_Ended_On__c.field-meta.xml
<CustomField>
    <fullName>Session_Ended_On__c</fullName>
    <description>When the applicant&apos;s session last ended, and how. Written by ADHA_JourneyController.endSession for an explicit sign out and for an idle timeout. Not written when a session is superseded by a login elsewhere, because the applicant is still signed in on the newer one. Field history carries the reason trail; Session_Ended_Reason__c carries the latest.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Session Ended On</label>
    <type>DateTime</type>
</CustomField>