MODON MRE BPDEV/force-app/main/default/objects/ADHA_Applicant__c/fields/Session_Ended_Reason__c.field-meta.xml
<CustomField>
    <fullName>Session_Ended_Reason__c</fullName>
    <description>How the last session ended: Signed out, Idle timeout or Superseded. Set alongside Session_Ended_On__c. Restricted, because it is written from a client-supplied reason and anything unrecognised is normalised to Signed out before it reaches here.</description>
    <label>Session Ended Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Signed out</fullName>
            </value>
            <value>
                <fullName>Idle timeout</fullName>
            </value>
            <value>
                <fullName>Superseded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>