MODON MRE BPDEV/force-app/main/default/objects/ADHA_Applicant__c/fields/Session_Expires_At__c.field-meta.xml
<CustomField>
    <fullName>Session_Expires_At__c</fullName>
    <description>Idle expiry of the verified session. Independent of the 7-day SLA.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Session Expires At</label>
    <type>DateTime</type>
</CustomField>