MODON MRE BPDEV/force-app/main/default/objects/ADHA_Applicant__c/fields/Session_Hard_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Session_Hard_Expiry__c</fullName>
    <description>Absolute ceiling on a session, 8 hours from login. Session_Expires_At__c slides with activity but can never slide past this.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Session Hard Expiry</label>
    <type>DateTime</type>
</CustomField>