MODON MRE BPDEV/force-app/main/default/objects/ADHA_Applicant__c/fields/Session_Token_Hash__c.field-meta.xml
<CustomField>
    <fullName>Session_Token_Hash__c</fullName>
    <description>SHA-256 of the server-issued session token. The raw token is returned to the browser once and never stored.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Session Token Hash</label>
    <length>128</length>
    <type>Text</type>
</CustomField>