MODON MRE BPDEV/force-app/main/default/objects/ADHA_Applicant__c/fields/SLA_End__c.field-meta.xml
<CustomField>
    <fullName>SLA_End__c</fullName>
    <description>Start + 7 days. Unchanged by a unit change.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SLA End</label>
    <type>DateTime</type>
</CustomField>