MODON MRE BPDEV/force-app/main/default/objects/ADHA_Applicant__c/fields/SMS_Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>SMS_Failure_Reason__c</fullName>
    <description>Populated when the send fails.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SMS Failure Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>