MODON MRE BPDEV/force-app/main/default/objects/ADHA_Applicant__c/fields/SMS_Provider_Ref__c.field-meta.xml
<CustomField>
    <fullName>SMS_Provider_Ref__c</fullName>
    <description>Provider message id, for delivery reconciliation.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SMS Provider Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>